--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.6",
+    "@rainbow-me/rainbowkit": "^1.0.4",
     "alchemy-sdk": "^2.2.5",
     "axios": "^1.2.2",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^1.2.5",
+    "wagmi": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
